fix the dark mode so it shows up on popups

--- a/src/Custom.scss
+++ b/src/Custom.scss
@@ -29,7 +29,6 @@ html, body {
 
 .dark-mode {
   background-color: $gray-800;
-  transition: background-color 0.3s ease;
 }
 
 .card-header {
@@ -50,13 +49,11 @@ html, body {
 .dark-mode .card-body {
   color: $white;
   background-color: $gray-800;
-  transition: background-color 0.3s ease;
 }
 
 .dark-mode .card-header {
   color: $gray-100 !important;
   background-color: $gray-900 !important;
-  transition: background-color 0.3s ease;
 }
 
 .navbar {
@@ -68,7 +65,6 @@ html, body {
 .dark-mode .navbar {
   color: $gray-100;
   background-color: $gray-900;
-  transition: background-color 0.3s ease;
 }
 
 .dark-mode .navbar-brand {
@@ -83,14 +79,12 @@ html, body {
   color: $gray-200;
   border-color: #191c1f;
   background-color: $gray-900;
-  transition: background-color 0.3s ease;
 }
 
 .dark-mode .form-control:disabled {
   color: $gray-600;
   border-color: #191c1f;
   background-color: $gray-900;
-  transition: background-color 0.3s ease;
 }
 
 .dark-mode .form-control:focus {
@@ -148,21 +142,18 @@ html, body {
   color: $white;
   background-color: $danger;
   border: $gray-900;
-  transition: background-color 0.3s ease;
 }
 
 .dark-mode .alert-primary {
   color: $white;
   background-color: $primary;
   border: $gray-900;
-  transition: background-color 0.3s ease;
 }
 
 .dark-mode .alert-light {
   color: $white;
   background-color: $gray-900;
   border: #191c1f;
-  transition: background-color 0.3s ease;
 }
 
 code {
@@ -177,7 +168,6 @@ code {
 .dark-mode code {
   color: white !important;
   background-color: $gray-900;
-  transition: background-color 0.3s ease;
 }
 
 pre {
